2008-02-23  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* dllwrapper1/wine/module.c:
	* dllwrapper1/wine/pe_image.c:
	* dllwrapper1/wine/win32.c:
	* src/BuzzMachineLoader.dll:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.cpp:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* tests/testmachine.sh:
	  Tune logging to be a bit less verbose. Implement more wrapped API, got
	  more machines working.

2008-02-19  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	  Reorder init calls.

	* src/BuzzMachineLoader/BuzzMachineCallbacks.h:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.h:
	  No need to clear auxuffer.

2008-02-18  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* tests/testmachine.sh:
	  Get more details and also link to the results.

	* src/bmltest_info.c:
	  Do fflush to increase the likelyhood we have the logs complete.  

2008-02-17  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	  Format comment.

	* TODO:
	* src/bmltest_info.c:
	* tests/sorttable.js:
	* tests/testmachine.sh:
	  Generate html result table.

2008-02-16  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.cpp:
	  Remove newline from log print.

	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* src/BuzzMachineLoader/BuzzMachineLoader.h:
	* src/bml.c:
	* src/bml.h:
	  Add AttributesChanged to wrapped api.

	* src/bmltest_process.c:
	  Try calling this to get ninja delay fixed. I looks like something is
	  not getting initialized here.

2008-02-11  Stefan Kost  <ensonic@users.sf.net>

	* src/bmltest_process.c:
	  Extended the test app.

2008-02-11  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader.dll:
	  New version

2008-02-11  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	  Don't access version, if its not initialized yet.

2008-02-10  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader.dll: