@@ -14,23 +14,30 @@ eventually improve scrolling:
 result should go to a given directory (use date-time when not provided)
 
 = unemulated used libs =
-wine/module: Win32 LoadLibrary failed to load: COMCTL32.dll
-wine/module: Win32 LoadLibrary failed to load: DSOUND.dll
-wine/module: Win32 LoadLibrary failed to load: GDI32.dll
-wine/module: Win32 LoadLibrary failed to load: KERNEL32.dll
-wine/module: Win32 LoadLibrary failed to load: MSVCRT.dll
-wine/module: Win32 LoadLibrary failed to load: OLEAUT32.dll
-wine/module: Win32 LoadLibrary failed to load: OLEPRO32.DLL
-wine/module: Win32 LoadLibrary failed to load: SHELL32.dll
-wine/module: Win32 LoadLibrary failed to load: SHLWAPI.dll
-wine/module: Win32 LoadLibrary failed to load: USER32.dll
-wine/module: Win32 LoadLibrary failed to load: WINMM.dll
-wine/module: Win32 LoadLibrary failed to load: WINSPOOL.DRV
-wine/module: Win32 LoadLibrary failed to load: comdlg32.dll
-wine/module: Win32 LoadLibrary failed to load: kernel32.dll
-wine/module: Win32 LoadLibrary failed to load: msvcrt.dll
-wine/module: Win32 LoadLibrary failed to load: ole32.dll
-wine/module: Win32 LoadLibrary failed to load: oledlg.dll
+      3 wine/module: Win32 LoadLibrary failed to load: COMCTL32.dll
+     28 wine/module: Win32 LoadLibrary failed to load: comdlg32.dll
+      1 wine/module: Win32 LoadLibrary failed to load: DSOUND.dll
+   2588 wine/module: Win32 LoadLibrary failed to load: GDI32.dll
+  81803 wine/module: Win32 LoadLibrary failed to load: KERNEL32.dll
+    147 wine/module: Win32 LoadLibrary failed to load: MSVCRT.dll
+    254 wine/module: Win32 LoadLibrary failed to load: ole32.dll
+     30 wine/module: Win32 LoadLibrary failed to load: OLEAUT32.dll
+     20 wine/module: Win32 LoadLibrary failed to load: oledlg.dll
+     18 wine/module: Win32 LoadLibrary failed to load: OLEPRO32.DLL
+      2 wine/module: Win32 LoadLibrary failed to load: SHELL32.dll
+      1 wine/module: Win32 LoadLibrary failed to load: SHLWAPI.dll
+   4775 wine/module: Win32 LoadLibrary failed to load: USER32.dll
+     44 wine/module: Win32 LoadLibrary failed to load: WINMM.dll
+     63 wine/module: Win32 LoadLibrary failed to load: WINSPOOL.DRV
+
+* ole stuff could be machines using auxbus
+* DSOUND.dll
+  Geonik's Dx Input.dll
+* SHLWAPI.dll
+  BuzzInAMovie.dll
+* SHELL32.dll
+  Rout VST Plugin Loader.dll
+  mimo's miXo.dll
 
 = missing window function entries =
 unk__malloc_dbg
@@ -38,6 +45,7 @@ from MSVCRTD.dll which I can't find
 
 = missing features =
 * callbackinterface (wavetable access)
+* getting access to Patterns/Sequence
 
 = what windows dll to copy and which not =
 == don't (we need to emulate) ==
@@ -47,26 +55,24 @@ msvcp50.dll  msvcp60.dll MFC42.DLL  MSVCRT.DLL
 
 = known not working machines =
 2008.02.22 : Of 532 machine(s) 448 machine(s) worked and 84 machine(s) failed.
-2008.02.23 : Of 532 machine(s) 453 machine(s) worked and 79 machine(s) failed.
+2008.02.23 : Of 533 machine(s) 457 machine(s) worked and 76 machine(s) failed.
 
 == Generators ==
 Geonik's PrimiFun.dll
+m4wii.dll
   Called unk__CxxThrowException
   http://www.winehq.org/pipermail/wine-patches/2002-October/003917.html
   http://source.winehq.org/source/dlls/msvcrt/cppexcept.c
   http://source.winehq.org/source/dlls/msvcrt/cppexcept.h
-  - the unk__ is gone (empty impl), but it segfaults. may be we need a full impl
+  If we wrap this localy, the unk__ is gone (empty impl), but it segfaults.
+  Maybe we need a full impl.
 
-Rout 808.dll
-Rout 909.dll 
-  unk_FindResourceExA
-
+Ruff SPECCY II.dll
+HD Percussive_FM.dll
+  crash after 
 
 == Effects ==
 Arguelles TruePan
-FSM PhatMan
-  Called unk_VirtualQuery
-  BuzzMachineCallbacks::MessageBoxA (txt="this pointer is sick - kill Oskari")
 Jeskola Raverb
   BuzzMachineCallbacks::GetEnvSize (wave=-96185375,env=0)
 Sonic Verb
